[package]
name = "sdl3-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.6.0"
etagere = "0.2.13"
image = { version = "0.25.5" }
inline-spirv = "0.2.1"
nalgebra = "0.33.2"
rand = "0.8.5"
roots = "0.0.8"
sdl3-sys = { version = "0.1.3", features = ["build-from-source-static"] }
smallvec = "1.13.2"
ttf-parser = "0.25.1"

[lib]
name = "lsd"
path = "src/lsd/lib.rs"

[[bin]]
name = "mtsdf"
path = "src/mtsdf.rs"

[[bin]]
name = "nbody"
path = "src/nbody.rs"
